[package]
name = "lru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru_lib = {package = "lru", version = "0.7.7", default-features = false}

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false